<resources>
    <string name="app_name">Product Detail</string>
    <string name="description">Sepatu lari kece edisi terbatas. Memakai sepatu ini akan meningkatkan pemahamanmu ketika belajar coding.\n\nBarang selalu ada. Tersedia berbagai ukuran dan warna. Silakan langsung order!</string>
    <string name="buy">Beli Sekarang!</string>
    <string name="size">42</string>
    <string name="rating">4.5 (1.249)</string>
    <string name="color">Coklat</string>
    <string name="date">Diunggah 5 Agu 2021</string>
    <string name="store">Toko Dicoding</string>
    <string name="name">Sepatu Lari</string>
    <string name="price">Rp. 200.000,00</string>
</resources>